# more-htmx-eploration

./: .gitignore  go.mod  go.sum
cmd/: hello.templ  hello_templ.go  main.go
public/views/: timings.templ
tracker-rs/: Cargo.toml  package-lock.json  package.json  webpack.config.js
tracker-rs/src/: db.rs  index.ts  main.rs  templates.rs
tracker-rs/templates/: controls.html  index.html  macro.html  timer.html  timing.html  timings.html  total-time.html
